Re: Issue #25 allow post category and tag lists to wrap

--- a/style.css
+++ b/style.css
@@ -759,7 +759,7 @@ legend      {font-weight: bold; font-size:1.2em;}
 	border-radius: 4px;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
-	white-space: nowrap;
+	white-space: normal;
 }
 
 .post-meta div:first-child{
